# RenderX

./: CMakeLists.txt  README.md
doc/: pipelines.md  shading.md
examples/: glfw_example.txt  triangle.cpp
shaders/: basic.fx
src/: README.md  RxFramebuffer.h  RxInterfaces.h  RxMesh.h  RxShader.h  RxVertexBuffer.cpp  RxVertexBuffer.h  shader.hpp
src/Impl/: RxFramebufferImpl.h
src/Impl/OpenGL/: RxTextureGL.cpp
src/OpenGL/: GDI_GL3.cpp  GDI_OpenGLBase.cpp  GLFramebuffer.cpp  GLHelpers.cpp  GLShader.cpp  GLTextureCube.cpp  GLTextureCube.h  GLVertexBuffer.cpp  RendererGLES.h  gdi_openglbase.h  glframebuffer.h  glhelpers.h  glvertexbuffer.h
src/OpenGL/GLEW/: glew.c
src/rex/: RxFramebuffer.cpp  RxGlobal.h  RxIndexArray.cpp  RxIndexArray.h  RxInterfaces.h  RxMesh.cpp  RxModel.h  RxShader.cpp  RxTexture.cpp  RxTexture.h  RxVertexArray.cpp  RxVertexArray.h  RxVertexDecl.h  bitmap.cpp  bitmap.hpp  command.hpp  command_buffer.cpp  command_buffer.hpp  config.hpp  context.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  handle.hpp  index_array.cpp  index_array.hpp  instance.cpp  instance.hpp  mesh.cpp  mesh.hpp  message_bus.cpp  message_bus.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  shader_lang.hpp  shader_parser.cpp  shader_parser.hpp  (+11 more)
src/rex/OpenGL/: GDI_GL3.cpp  GDI_GL3.h  GDI_GLES2.cpp  GDI_GLES2.h  GLIndexBuffer.cpp  GLIndexBuffer.h  RendererGLES1.cpp  gl_pipeline.cpp  gl_pipeline.hpp  glshader.h
src/rex/geometry/: cube_builder.hpp
src/rex/opengl/: gl_default_shaders.hpp  gl_device.cpp  gl_device.hpp  gl_framebuffer.cpp  (+11 more)
(+14 files in other folders)
